fix: update Locale initialization in DateTimeUtils to use Locale.of method